# mobc-sqlx

./: Cargo.toml  LICENSE-MIT  shell.nix
.github/workflows/: ci.yml  publish.yml
src/: lib.rs  migrator.rs
